# DumbOS

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/kernel/: utils.h
src/: boot.asm
src/boot/: CMakeLists.txt  boot.asm  boot2.asm  kernel.asm
src/kernel/: kernel.c  utils.c
